k8s/CKA_Prep/08-Service/03-pod-svc-test.yml
apiVersion: v1
kind: Pod
metadata:
    name: pod-svc-test
spec:
    containers:
        - name: busybox
          image: radial/busyboxplus:curl
          command: ['sh', '-c', 'while true; do sleep 10; done']
