k8s/CKA_Prep/08-Service/02-svc-clusterip.yml
apiVersion: v1
kind: Service
metadata:
    name: svc-clusterip
spec:
    type: ClusterIP     # ClusterIP is the default
    selector:
        app: svc-example
    ports:
        - protocol: TCP
          port: 80
          targetPort: 80
          name: http
