k8s/CKA_Prep/08-Service/05-my-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: my-ingress
spec:
    rules:
        - http:
              paths:
                  - path: /somepath
                    pathType: Prefix
                    backend:
                        service:
                            name: svc-clusterip
                            port:
                                name: http
